--- a/composer.json
+++ b/composer.json
@@ -6,6 +6,7 @@
     "license": "MIT",
     "require": {
         "php": "^8.2",
+        "drnxloc/laravel-simple-html-dom": "^1.9",
         "jcobhams/newsapi": "^1.0",
         "laravel/framework": "^11.0",
         "laravel/sanctum": "^4.0",
